[gd_scene load_steps=14 format=2]

[ext_resource path="res://visual/godot_icon_2.png" type="Texture" id=1]
[ext_resource path="res://fonts/fragmentmono.tres" type="DynamicFont" id=3]
[ext_resource path="res://visual/subvertissement_logo_mod.png" type="Texture" id=4]
[ext_resource path="res://scenes/Menu.gd" type="Script" id=5]
[ext_resource path="res://visual/gwj_logo_mod.png" type="Texture" id=6]
[ext_resource path="res://scenes/TileMapMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://themes/Theme.tres" type="Theme" id=8]
[ext_resource path="res://visual/logo.png" type="Texture" id=9]
[ext_resource path="res://visual/cauldron.png" type="Texture" id=10]
[ext_resource path="res://audio/subvertissement_splash.ogg" type="AudioStream" id=12]

[sub_resource type="Animation" id=10]
resource_name = "Splash01godot"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("SplashGodot:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SplashGodot/SplashBG:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.4 ),
"transitions": PoolRealArray( 0.965465, 1 ),
"update": 0,
"values": [ Color( 0.27451, 0.258824, 0.368627, 1 ), Color( 0.27451, 0.258824, 0.368627, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SplashGodot/CenterContainer/VBoxContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1.7, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}

[sub_resource type="Animation" id=11]
resource_name = "Splash02subver"
length = 4.5
tracks/0/type = "value"
tracks/0/path = NodePath("SplashSubvert:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SplashSubvert/SubvertissementLogo:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 4 ),
"transitions": PoolRealArray( 1, 4.75683, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SplashSubvert/SplashCover:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 2.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SplashSubvert/SplashBG:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0, 4.5 ),
"transitions": PoolRealArray( 8.57418, 1 ),
"update": 0,
"values": [ Color( 0.27451, 0.258824, 0.368627, 1 ), Color( 0.27451, 0.258824, 0.368627, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SplashSubvert/TicTacPing:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( -0.1, 0.2, 2.6, 4.2 ),
"transitions": PoolRealArray( 1, 1, 1, 9.84917 ),
"update": 0,
"values": [ -80.0, 0.0, 0.0, -80.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SplashSubvert/TicTacPing:stream_paused")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SplashSubvert/TicTacPing:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SplashSubvert/TicTacPing:autoplay")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "method"
tracks/8/path = NodePath(".")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "SubvertSplashSubs"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "SplashGWJ"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("SplashGWJ:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SplashGWJ/CenterContainer/VBoxContainer/TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SplashGWJ/SplashCover:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Menu" type="Control"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -71.0 ],
"_edit_vertical_guides_": [  ]
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
own_world = true
transparent_bg = true
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3
gui_disable_input = true

[node name="TileMapMenu" parent="ViewportContainer/Viewport" instance=ExtResource( 7 )]

[node name="SplashSubvert" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="SplashBG" type="ColorRect" parent="SplashSubvert"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.27451, 0.258824, 0.368627, 1 )

[node name="SubvertissementLogo" type="Sprite" parent="SplashSubvert"]
visible = false
self_modulate = Color( 0.819608, 0.486275, 0.486275, 1 )
position = Vector2( 509, 290 )
texture = ExtResource( 4 )

[node name="SplashCover" type="ColorRect" parent="SplashSubvert"]
anchor_left = 0.18457
anchor_top = 0.706667
anchor_right = 0.81543
anchor_bottom = 0.87
color = Color( 0.27451, 0.258824, 0.368627, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TicTacPing" type="AudioStreamPlayer" parent="SplashSubvert"]
stream = ExtResource( 12 )
volume_db = -53.3333
bus = "SoundFX"

[node name="SplashGodot" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="SplashBG" type="ColorRect" parent="SplashGodot"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.27451, 0.258824, 0.368627, 1 )

[node name="CenterContainer" type="CenterContainer" parent="SplashGodot"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 30.0

[node name="VBoxContainer" type="VBoxContainer" parent="SplashGodot/CenterContainer"]
visible = false
margin_left = 62.0
margin_top = 69.0
margin_right = 962.0
margin_bottom = 501.0
rect_min_size = Vector2( 900, 0 )
custom_constants/separation = 42
alignment = 1

[node name="TextureRect" type="TextureRect" parent="SplashGodot/CenterContainer/VBoxContainer"]
margin_right = 900.0
margin_bottom = 360.0
rect_min_size = Vector2( 480, 360 )
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="RichTextLabel" type="RichTextLabel" parent="SplashGodot/CenterContainer/VBoxContainer"]
self_modulate = Color( 0.964706, 0.776471, 0.658824, 1 )
margin_top = 402.0
margin_right = 900.0
margin_bottom = 432.0
size_flags_vertical = 3
theme = ExtResource( 8 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]godot engine v3.5.1.stable.official[/center]"
text = "godot engine v3.5.1.stable.official"
fit_content_height = true

[node name="SplashGWJ" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="SplashBG" type="ColorRect" parent="SplashGWJ"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.27451, 0.258824, 0.368627, 1 )

[node name="CenterContainer" type="CenterContainer" parent="SplashGWJ"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0

[node name="VBoxContainer" type="VBoxContainer" parent="SplashGWJ/CenterContainer"]
margin_left = 62.0
margin_top = 90.0
margin_right = 962.0
margin_bottom = 490.0
rect_min_size = Vector2( 900, 0 )
custom_constants/separation = 42
alignment = 1

[node name="TextureRect" type="TextureRect" parent="SplashGWJ/CenterContainer/VBoxContainer"]
self_modulate = Color( 0.819608, 0.486275, 0.486275, 1 )
margin_right = 900.0
margin_bottom = 400.0
rect_min_size = Vector2( 480, 400 )
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="SplashCover" type="ColorRect" parent="SplashGWJ"]
visible = false
anchor_left = 0.18457
anchor_top = 0.171667
anchor_right = 0.81543
anchor_bottom = 0.69
color = Color( 0.27451, 0.258824, 0.368627, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Startup" type="AnimationPlayer" parent="."]
anims/Splash01godot = SubResource( 10 )
anims/Splash02subver = SubResource( 11 )
anims/SplashGWJ = SubResource( 12 )

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -300.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 600 )
custom_constants/margin_right = 92
custom_constants/margin_top = 42
custom_constants/margin_left = 76
custom_constants/margin_bottom = 42

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
margin_left = 76.0
margin_top = 204.0
margin_right = 308.0
margin_bottom = 558.0
size_flags_horizontal = 3
size_flags_vertical = 8
custom_constants/separation = 21

[node name="Spacer" type="Control" parent="MainMenu/MarginContainer/VBoxContainer"]
margin_right = 232.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 54 )

[node name="Play" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 232.0
margin_bottom = 129.0
rect_min_size = Vector2( 0, 54 )
theme = ExtResource( 8 )
text = "Story Mode"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Levels" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 232.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 54 )
theme = ExtResource( 8 )
text = "Levels"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Settings" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
margin_top = 225.0
margin_right = 232.0
margin_bottom = 279.0
rect_min_size = Vector2( 0, 54 )
theme = ExtResource( 8 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Credits" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
visible = false
margin_top = 300.0
margin_right = 227.0
margin_bottom = 354.0
rect_min_size = Vector2( 0, 54 )
theme = ExtResource( 8 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Exit" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
margin_top = 300.0
margin_right = 232.0
margin_bottom = 354.0
rect_min_size = Vector2( 0, 54 )
theme = ExtResource( 8 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="MainMenu"]
light_mask = 0
margin_left = 43.0
margin_top = 15.0
margin_right = 681.0
margin_bottom = 392.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Cauldron2" type="Sprite" parent="MainMenu/TextureRect"]
show_behind_parent = true
position = Vector2( 325, 464 )
scale = Vector2( 4, 4 )
z_index = 3
texture = ExtResource( 10 )

[connection signal="mouse_entered" from="MainMenu/MarginContainer/VBoxContainer/Play" to="." method="_on_Play_mouse_entered"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="MainMenu/MarginContainer/VBoxContainer/Levels" to="." method="_on_Levels_mouse_entered"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Levels" to="." method="_on_Levels_pressed"]
[connection signal="mouse_entered" from="MainMenu/MarginContainer/VBoxContainer/Settings" to="." method="_on_Settings_mouse_entered"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="mouse_entered" from="MainMenu/MarginContainer/VBoxContainer/Credits" to="." method="_on_Credits_mouse_entered"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="mouse_entered" from="MainMenu/MarginContainer/VBoxContainer/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
